--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <i>For me it is an another whole year for <u>Pareshaan</u> you. </i>😁🤭👋🤗
              
         </p>
-        <h4 class="mysohna">I wish to my god, you hameshaa hameshaa Be Happy and strong or hameshaa sahi rashte pr aage badhte rho and let your family and the whole India and the world be proud of youh.</h4>
+        <h4 class="mysohna">I wish to my god, you hameshaa hameshaa Be Happy and strong or hameshaa sahi rashte pr aage badhte rho and let your family be proud of youh.</h4>
         <button class="btn">Riyu</button>
     </div>
 </body>
